# gelquant

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  notebook-example.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-format.yml
data/: a_data.json  b_data.json
example/: notebook-example.ipynb
example/data/: a_data.json
gelquant/: __init__.py  cli.py  gelquant.py
