[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 100
ignore = []

[tool.isort]
multi_line_output = 6
sections=["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_firstparty = "Firstparty libraries"
import_heading_thirdparty = "Thirdparty libraries"
