[metadata]
name = gelquant
version = 0.1.1
description = Gel analysis pipeline
author = Joseph Harman
author_email = josephharman25@gmail.com
maintainer = Andreas Sagen
maintainer_email = developer@sagen.io
url = https://github.com/exterex/gelquant
license = MIT
classifiers = 
    Development Status:: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic:: Scientific / Engineering:: Bio - Informatics

[options]
install_requires =
    numpy>=1.18.5
    pandas>=1.1.2
    matplotlib>=3.2.2
    pillow>=7.1.2
    scipy>=1.5.1
packages = gelquant