[metadata]
name = gelquant
version = file: gelquant/version
url = https://github.com/exterex/gelquant
download_url = https://github.com/exTerEX/gelquant/releases
author = Joseph Harman
author_email = josephharman25@gmail.com
maintainer = Andreas Sagen
maintainer_email = developer@sagen.io
classifiers = 
    Development Status:: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic:: Scientific / Engineering:: Bio - Informatics
license = MIT
license_file = LICENSE
description = Gel analysis pipeline
long_description = file: README.md
long_description_content_type = text/markdown
keywords = image processing,biology,PAGE
platforms = OS independent

[options]
zip_safe = False
install_requires =
    numpy>=1.18.5
    pandas>=1.1.2
    matplotlib>=3.2.2
    pillow>=7.1.2
    scipy>=1.5.1
python_requires = >=3.6
include_package_data = True
packages = gelquant